tests/compile-fail/integration_suite__integration__general__reg_in_unsupported_lang.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: argument must be a compile-time constant
   ┌─ <input>:13:18
   │
13 │       textSet(0, $REG[0], "cheese");  
   │                  ^^^^^^^ not constant
   │
   = because the argument is a word-sized integer


